[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gleam"
version = "0.1.0"
description = "GLEAM: Graph-based method for multi-modal single-cell integration and missing-modality prediction"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  # change to your actual license
authors = [
  { name = "Siqi Shen", email = "sshen82@wisc.edu" }
]

dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]